--- a/lab/lab2/part1-jquery.html
+++ b/lab/lab2/part1-jquery.html
@@ -39,7 +39,24 @@
       <label id="color-label" for="color-input">This is a color input</label>
       <input type="color" id="color-input">
       <br>
-      <button>A Button</button>
+      <br>
+      <label> Location Name </label>
+      <input id="markerName" type="text" placeholder "Name Here">
+      <br>
+      <br>
+      <Label> Lattitude </label>
+      <input id="LATT" type="number">
+      <br>
+      <br>
+      <label> Longitude </label>
+      <input id="LONG" type="number">
+      <br>
+      <br>
+      <label> Marker Color</label>
+      <input id="markerColor" type="color">
+      <br>
+      <button>Submit</button>
+
     </div>
     <!-- Map -->
     <div id="map" class="map"></div>
